tests/on-reuse.stderr
error: cannot use `X` more than once
   ┌─ test:12:7
   │
11 │     f x
   │       - `x` first used here
12 │     f x
   │       ^ `x` reused here
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/reused-variable

error: cannot use `X` more than once
   ┌─ test:18:3
   │
11 │     f x
   │       - `x` first used here
   ·
14 │   2 -> f x
   │          - `x` first used here
15 │   _ -> f x
   │          - `x` first used here
   ·
18 │ f x
   │   ^ `x` reused here
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/reused-variable

