tests/on-reuse.wpl
[no-reuse]
X : type

f :: X -> ()
f : _ -> ()

x : X

when 1 {
  1 -> {
    f x
    f x
  }
  2 -> f x
  _ -> f x
}

f x
